# sapling

./: .copier-answers.yml  .dockerignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Earthfile  Justfile  LICENSE  README.md  benches.md  ci.Dockerfile  ci.nu  dagger.json  mise.toml  pyproject.toml  renovate.gha.json  renovate.json  tox.ini
.dagger/: pyproject.toml
.dagger/src/dagger_ci/: __init__.py  main.py
.github/actions/common/: action.yml
.github/workflows/: auto-rebase.yaml  comment.yml  lint.yml  package.yml  pex.yml  pr-check-nushell.yaml  pr-check.yaml  pr-ci.yml  release-nushell.yml  release.yml  renovate.yml  test.yml
readme/: Quickstart.md
src/adriencos_sapling/: __init__.py  cli.py
src/adriencos_sapling/example_module/: __init__.py
src/sapling/: __init__.py  cli.py
src/sapling/example_module/: __init__.py
tests/: __init__.py  test_cli.py
tests/test_adriencos_sapling/: test_adriencos_sapling.py
tests/test_sapling/: test_sapling.py
