[project]
name = "adriencos_sapling"
authors = [{ name = "Adrien Cosson", email = "adrien@cosson.io" }]
description = "Sapling"
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = { text = "MIT" }
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
keywords = []
version = "3.0.0"
dependencies = ["Click==8.3.2", "loguru==0.7.3"]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/AdrienCos/sapling"
Documentation = "https://github.com/AdrienCos/sapling/wiki"
Repository = "https://github.com/AdrienCos/sapling"
Issues = "https://github.com/AdrienCos/sapling/issues"

[project.scripts]
adriencos_sapling = "adriencos_sapling.cli:main"

[tool.coverage.run]
branch = true
source = ["adriencos_sapling"]
parallel = true

[tool.coverage.paths]
source = ["src/"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "ERA",   # eradicate
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "RET",   # flake8-return
    "PTH",   # flake8-use-pathlib
    "FLY",   # flynt
    "I",     # ruff (import sorting)
    "E",     # pycodestyle
    "D",     # pydocstyle
    "UP",    # pyupgrqde
    "F",     # pyflakes
    "RUF",   # ruff
    "TRY",   # tryceratops
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["adriencos_sapling"]

[dependency-groups]
dev = [
    "copier==9.14.3",
    "coverage==7.13.5",
    "pre-commit==4.5.1",
    "pyclean==3.6.0",
    "pytest==9.0.2",
    "rope==1.14.0",
    "ruff==0.15.9",
    "toml==0.10.2",
    "ty==0.0.29",
]
